# spotr

./: Cargo.toml
src/: cli.rs  config.rs  dialouge.rs  error.rs  keyring.rs  main.rs  oauth.rs
