[package]
name = "spotr"
description = "Spotify remote controller"
version = "0.1.0"
authors = ["Erlend Tobiassen <erlend.tobiassen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = "0.10"
keyring = "0.7"
rpassword = "4.0"
anyhow = "1.0"
parking_lot = "0.10"
rspotify = { git = "https://github.com/regiontog/rspotify" }
open = "1.3"
rouille = "3.0"
serde_json = "1.0"
serde = "1.0"
thiserror = "1.0"
failure = "0.1"
structopt = "0.3"

[patch.crates-io]
secret-service = { git = 'https://github.com/regiontog/secret-service-rs' }