[package]
name = "spotr"
description = "Spotify remote controller"
version = "0.1.0"
authors = ["Erlend Tobiassen <erlend.tobiassen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11"
attohttpc = "0.10"
keyring = "0.7"
rpassword = "4.0"
anyhow = "1.0"
parking_lot = "0.10"
open = "1.3"
rouille = "3.0"
serde_json = "1.0"
serde = "1.0"
toml = "0.5"
thiserror = "1.0"
failure = "0.1"
structopt = "0.3"
directories = "2.0"
# spotify-web = { git = "https://github.com/regiontog/spotify-web" }
spotify-web = { path = "../spotify-web" }
ring = "0.16"
log = "0.4"
env_logger = "0.7"

[patch.crates-io]
secret-service = { git = 'https://github.com/regiontog/secret-service-rs' }
keyring = { git = 'https://github.com/regiontog/keyring-rs' }